[package]
name = "presence-canary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-humanize = "0.2.1"
humantime = "2.1.0"
tokio = { version = "1.16.1", features = ["full"] }
warp = "0.3.2"
